--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "gatsby-plugin-sitemap": "^5.4.0",
     "gatsby-source-filesystem": "^4.4.0",
     "gatsby-theme-material-ui": "^5.1.0",
+    "gatsby-transformer-remark": "^5.5.2",
     "gatsby-transformer-sharp": "^4.4.0",
     "netlify-cms-app": "^2.15.61",
     "react": "^17.0.1",
