--- a/static/admin/config.yml
+++ b/static/admin/config.yml
@@ -56,6 +56,7 @@ collections:
     label_singular: Event
     folder: src/pages/events
     create: true
+    slug: "{{year}}-{{month}}-{{day}}_{{slug}}"
     fields:
       - { name: name, label: Event name, widget: string }
       - { name: date, label: Date, widget: datetime }
