--- a/static/admin/config.yml
+++ b/static/admin/config.yml
@@ -58,6 +58,12 @@ collections:
     create: true
     slug: "{{year}}-{{month}}-{{day}}_{{name}}"
     fields:
+      - {
+          name: "templateKey",
+          label: "Template Key",
+          widget: "hidden",
+          default: "event-page",
+        }
       - { name: name, label: Event name, widget: string }
       - { name: date, label: Date, widget: datetime }
       - {
