--- a/package.json
+++ b/package.json
@@ -15,8 +15,7 @@
     "clean": "gatsby clean"
   },
   "dependencies": {
-    "@emotion/react": "^11.7.1",
-    "@emotion/styled": "^10.3.0",
+    "@mui/icons-material": "^5.3.0",
     "@mui/material": "^5.2.4",
     "gatsby": "^4.4.0",
     "gatsby-plugin-image": "^2.4.0",
