--- a/package.json
+++ b/package.json
@@ -15,6 +15,9 @@
     "clean": "gatsby clean"
   },
   "dependencies": {
+    "@emotion/react": "^11.7.1",
+    "@emotion/server": "^11.4.0",
+    "@emotion/styled": "^10.3.0",
     "@mui/icons-material": "^5.3.0",
     "@mui/material": "^5.2.4",
     "gatsby": "^4.4.0",
