--- a/package.json
+++ b/package.json
@@ -31,9 +31,12 @@
     "gatsby-theme-material-ui": "^5.1.0",
     "gatsby-transformer-remark": "^5.5.2",
     "gatsby-transformer-sharp": "^4.4.0",
+    "moment": "^2.29.1",
+    "moment-timezone": "^0.5.34",
     "netlify-cms-app": "^2.15.61",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
-    "react-helmet": "^6.1.0"
+    "react-helmet": "^6.1.0",
+    "react-moment": "^1.1.1"
   }
 }
