--- a/static/admin/config.yml
+++ b/static/admin/config.yml
@@ -43,6 +43,7 @@ collections:
   - name: events
     label: Events
     label_singular: Event
+    description: Events for the club
     folder: src/pages/events
     create: true
     slug: "{{year}}-{{month}}-{{day}}_{{name}}"
