--- a/static/admin/config.yml
+++ b/static/admin/config.yml
@@ -12,7 +12,7 @@ collections:
     label_singular: Person
     folder: src/pages/people
     slug: "{{personName.first}}_{{personName.last}}"
-    summary: "{{personName.first}} {{personName.last}}"
+    summary: "{{personName.first}} {{personName.last}} ({{personRole}})"
     create: true
     fields:
       - name: personName
