--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@emotion/react": "^11.7.1",
     "@emotion/server": "^11.4.0",
     "@emotion/styled": "^10.3.0",
+    "@mdx-js/react": "^2.0.0",
     "@mui/icons-material": "^5.3.0",
     "@mui/material": "^5.2.4",
     "gatsby": "^4.4.0",
