--- a/package.json
+++ b/package.json
@@ -18,12 +18,14 @@
     "@emotion/react": "^11.7.1",
     "@emotion/server": "^11.4.0",
     "@emotion/styled": "^10.3.0",
-    "@mdx-js/react": "^2.0.0",
+    "@mdx-js/mdx": "^1.6.22",
+    "@mdx-js/react": "^1.6.22",
     "@mui/icons-material": "^5.3.0",
     "@mui/material": "^5.2.4",
     "gatsby": "^4.4.0",
     "gatsby-plugin-image": "^2.4.0",
     "gatsby-plugin-manifest": "^4.4.0",
+    "gatsby-plugin-mdx": "^3.7.0",
     "gatsby-plugin-netlify-cms": "^6.4.0",
     "gatsby-plugin-react-helmet": "^5.4.0",
     "gatsby-plugin-sharp": "^4.4.0",
