--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "@mui/icons-material": "^5.3.0",
     "@mui/material": "^5.2.4",
     "gatsby": "^4.4.0",
+    "gatsby-cli": "^4.22.1",
     "gatsby-plugin-image": "^2.4.0",
     "gatsby-plugin-manifest": "^4.4.0",
     "gatsby-plugin-mdx": "^3.7.0",
